--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import SocialNet from "../components/SocialNet.astro";
 import Linkedin from "../icons/Linkedin.astro";
-import GitHub from "../icons/Github.astro";
+import GitHub from "../icons/GitHub.astro";
 import Email from "../icons/Email.astro";
 import Experience from "../components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import ExperienceIcon from "../icons/ExperiencieIcon.astro";
 import ProjectIcon from "../icons/ProjectIcon.astro";
 import Projects from "../components/Proyectos.astro";
+
 ---
 
 <Layout
@@ -16,14 +17,15 @@ import Projects from "../components/Proyectos.astro";
   description="Contrata a Henry Doudo para crear aplicaciones web. Desarrollador web y Adminsitrativo. Especializado en productos"
 >
   <main class="px-4">
-    <SectionContainer id="inicio" class="py-44 pb-32">
+    <SectionContainer id="inicio" class="py-44 pb-32" >
+		<img class="rounded-full w-20 h-20 mb-5" src="/public/mifoto.jpg" alt="Henry photo">
       <h1 class="text-3xl md:text-4xl font-bold flex flex-row gap-x-4 lg:pb-10">
         Hey, soy Henry 👨‍💻
       </h1>
       <h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">
         <span class="opacity-80">Desarollador web y Administrativo</span>. De
         Barcelona, España. Con amplios <span class="text-yellow-500/90"
-          >conociminetos en gestión de empresas y productos</span
+          >conocimientos en gestión de empresas y productos</span
         >. Especializado en crear soluciones eficientes y atractivas.
       </h2>
       <nav class="flex gap-4 mt-8 flex-wrap">
@@ -50,11 +52,12 @@ import Projects from "../components/Proyectos.astro";
     </SectionContainer>
 
     <SectionContainer>
-      <h2 class="text-2xl font-semibold mb-4 flex gap-x-3 items-center">
+      <h2 id="proyectos"class="text-3xl font-semibold mb-4 flex gap-x-3 items-center">
         <ProjectIcon class="size-7" />
          Proyectos
       </h2>
       <Projects />
     </SectionContainer>
+
   </main>
 </Layout>
