--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,9 @@
-<header class="flex justify-between items-center py-5 w-full xl:w-[1120px] mx-auto">
-    <img class="rounded-full w-12 h-12" src="/public/mifoto.jpg" alt="Henry photo">
+<header class="flex justify-center items-center py-2 w-7:w-[1000px] mx-auto border border-solid border-gray-300 p-4 rounded-full mt-2 bg-gray-200 bg-opacity-50">
     <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="#inicio">Inicio</a>
-        <a href="#sobre-mi">Sobre mi</a>
-        <a href="#experiencia">Experiencia</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#inicio" class="hover:text-gray-800 hover:text-white-2000 ">Inicio</a>
+        <a href="#sobre-mi" class="hover:text-gray-800 hover:text-white-2000 ">Sobre mi</a>
+        <a href="#experiencia" class="hover:text-gray-800 hover:text-white-2000 ">Experiencia</a>
+        <a href="#proyectos" class="hover:text-gray-800 hover:text-white-2000 ">Proyectos</a>
+        <a href="#contacto" class="hover:text-gray-800 hover:text-white-2000 ">Contacto</a>
     </nav>
 </header>
