--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -31,7 +31,7 @@ const PROJECTS = [
     description:
       "Pagina creada con PHP como backend y como frontend HTML, CSS Y JS nativos",
     github: "https://github.com/HenryDc1/JuegoQuienQuiereSerMillonario",
-    image: "/dist/millonario.png",
+    image: "/millonario.png",
     tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS],
   },
 ];
