path photo index fixed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Projects from "../components/Proyectos.astro";
 >
   <main class="px-4">
     <SectionContainer id="inicio" class="py-44 pb-32" >
-		<img class="rounded-full w-20 h-20 mb-5" src="/public/mifoto.jpg" alt="Henry photo">
+		<img class="rounded-full w-20 h-20 mb-5" src="/mifoto.jpg" alt="Henry photo">
       <h1 class="text-3xl md:text-4xl font-bold flex flex-row gap-x-4 lg:pb-10">
         Hey, soy Henry 👨‍💻
       </h1>
