Fixed exp.astro and proyectos.astro

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -41,7 +41,7 @@ const PROJECTS = [
   {
     title: "VOTAIETI - Web de votaciones",
     description:
-      "Web de votaciones en la que el usuario se puede registrar para gestionar y crear encuestas, analizar botos y crear comunidad ",
+      "Web de votaciones en la que el usuario puede votar, crear encuestas, analizar votos y crear comunidad.",
     github: "https://github.com/HenryDc1/VOTAIETI",
     image: "/97shots_so.png",
     tags: [TAGS.PHP, TAGS.JS, TAGS.JQuery,TAGS.HTML, TAGS.CSS],
