--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,19 +4,19 @@ const EXPERIENCE = [
   {
     date: "Julio 2022- Mayo 2023",
     title: "Asociado de Inventario  - Footlocker",
-    description: "Era el responsable de gestionar el inventario, recibir mercancía, mantener el orden y ayudar en las tareas de logística | ERP Oracle",
+    description: "Formaba parte de un equipo de trabajo en el que tenía la responsabilidad de cuidar la experiencia en tienda de los clientes, dar soporte a mis compañeros y estar en constante comunicacióncon el equipo de almacén.| ERP Oracle",
     link: "#",
   },
   {
     date: "Octubre 2021- Abril 2022",
     title: "Administrativo de nóminas - DHL",
-    description: "Mis tareas consistian en calcular las nominas de los empleados y dar soporte a mis compañeros | Excel, Microsoft Word, Microsoft PowerPoint",
+    description: "Gestionaba las entradas y salidas de mercancía del almacén así como su respectiva documentación, en momentos puntuales hacia tareas de picking.",
     link: "#",
   },
   {
     date: "Marzo 2020 - Julio 2020",
     title: "Auxiliar Administrativo - Aplica",
-    description: "Me encargaba de realizar tareas de gestión , como por ejemplo gestionar altas y bajas de empleados, gestionar facturas, elaborar albaránes y contabilidad | Excel, Contaplus, FacturaPlus ",
+    description: "Mis tareas eran gestionar y archivar facturas de clientes, contabilizar  clientes además de mercancía, formalizar procesos administrativos con hacienda y dar cobertura a los distintos departamentos de la empresa. | Excel,  ",
     link: "#",
   },
 ];
