more like laset commit

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -16,7 +16,7 @@ const EXPERIENCE = [
   {
     date: "Marzo 2020 - Julio 2020",
     title: "Auxiliar Administrativo - Aplica",
-    description: "Mis tareas eran gestionar y archivar facturas de clientes, contabilizar  clientes además de mercancía, formalizar procesos administrativos con hacienda y dar cobertura a los distintos departamentos de la empresa. | Excel,  ",
+    description: "Mis tareas eran gestionar y archivar facturas de clientes, contabilizar  clientes además de mercancía, formalizar procesos administrativos con hacienda y dar cobertura a los distintos departamentos de la empresa. | Excel, Microsoft World, Microsoft powerPoint  ",
     link: "#",
   },
 ];
